<resources>
    <string name="app_name">Nested Graph</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="main">Main</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="nine">Nine</string>
    <string name="eight">Eight</string>
    <string name="seven">Seven</string>
    <string name="six">Six</string>
    <string name="bubble">Bubble</string>
</resources>