<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">

    <LinearLayout
        android:id="@+id/tool_bar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_tool_bar_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_bar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <ImageView
            android:id="@+id/iv_bar_small_robot"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bubble"
            android:src="@drawable/ic_robot" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_main_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_main_nav"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_main"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/nav_main_graph" />


    <FrameLayout
        android:id="@+id/iv_big_robot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_host_main_fragment"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bubble"
            android:padding="6dp"
            android:src="@drawable/ic_robot" />


        <View
            android:id="@+id/v_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            android:background="@drawable/ic_cancel"
            android:clickable="true"
            android:focusable="true" />

    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_main_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>